--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,27 @@
 {
 	"name": "todo",
-		"version": "1.0.0",
-		"description": "building todo app using mongodb, express, react and nodejs",
-		"main": "server.js",
-		"scripts": {
-			"start": "node server.js",
-			"start-watch": "nodemon server.js",
-			"dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
-		},
-		"author": "Ojini Jude",
-		"license": "MIT",
-		"dependencies": {
-			"body-parser": "^1.18.3",
-			"dotenv": "^6.1.0",
-			"express": "^4.16.4",
-			"mongoose": "^5.3.6"
-		},
-		"devDependencies": {
-			"concurrently": "^4.0.1",
-			"nodemon": "^1.18.4"
-		}
+	"version": "1.0.0",
+	"description": "building todo app using mongodb, express, react and nodejs",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"start-watch": "nodemon server.js",
+		"dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
+	},
+	"author": "Ojini Jude",
+	"license": "MIT",
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"dotenv": "^6.1.0",
+		"express": "^4.16.4",
+		"mongoose": "^5.3.6"
+	},
+	"devDependencies": {
+		"concurrently": "^4.0.1",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.0",
+		"mongoose": "^5.5.9",
+		"nodemon": "^1.18.4"
+	}
 }
